--- a/cookbooks/apache/templates/default/index.html.erb
+++ b/cookbooks/apache/templates/default/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Hello Universe and World</h1>
+<h1>Hello World </h1>
 <p>My host name is <%= node['hostname'] %></p>
 <p>I am <%= node['current_user'] %></p>
-<p>I am <%= node['apache']['foo'] %></p>
-<p>I am <%= node['apache']['greeting'] %></p>
-
+<p>foo attribute value <%= node['apache']['foo'] %></p>
+<p>Greeting! <%= node['apache']['greeting'] %></p>
+<p>
