--- a/cookbooks/apache/templates/default/index.html.erb
+++ b/cookbooks/apache/templates/default/index.html.erb
@@ -3,4 +3,5 @@
 <p>I am <%= node['current_user'] %></p>
 <p>foo attribute value <%= node['apache']['foo'] %></p>
 <p>Greeting! <%= node['apache']['greeting'] %></p>
-<p>
+<p>This sie is <%= @site_name %>
+<p>This site IP is <%= node['ipaddress'] %>:<%= @port %></p>
